--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
             <div class="section">
                 <h1>Highlighted</h1>
                 <p>My favourite work</p>
-                <p class="swipe"><-- swipe for more  --></p>
+                <p class="swipe">< -- swipe for more  -- ></p>
                 <section class="swiper-section project-section">
                     <swiper-container class="mySwiper" effect="cards" grab-cursor="true">
                         <swiper-slide>
@@ -76,7 +76,6 @@
                     <div class="project-div-main">
                         <div class="project-uppper-div">
                             <img class="project-img"  rel="preload" loading="eager" src="assets/HR-min.png" style="background: #253946d1;" alt="web design project for an HR company">  
-                            <!-- <img class="project-img phone" rel="preload" loading="eager" src="assets/hr phone.png" style="background: #253946d1;" alt="web design project for an HR company">   -->
                         </div>
                         <div class="project-lower-div">
                             <p class="project-title">LIFT99 HR platform</p>
@@ -87,7 +86,6 @@
                     <div class="project-div-main">
                         <div class="project-uppper-div">
                             <img class="project-img" loading="eager" src="assets/ZBuzz-1-min.png" style="background: #9d9d9db4;" alt="web design project for an ecommerce shop">
-                            <!-- <img class="project-img phone" loading="eager" src="assets/zbuzz phone.png" style="background: #9d9d9db4;" alt="web design project for an ecommerce shop"> -->
                         </div>
                         <div class="project-lower-div">
                             <p class="project-title">ZBuzz Ecommerce</p>
@@ -98,7 +96,6 @@
                     <div class="project-div-main">
                         <div class="project-uppper-div">
                             <img class="project-img" loading="eager" src="assets/DAO-min.png" style="background: #311742d6;" alt="web design project for a web3 project">
-                            <!-- <img class="project-img phone" loading="eager" src="assets/DAO phone.png" style="background: #311742d6;" alt="web design project for a web3 project"> -->
                         </div>
                         <div class="project-lower-div">
                             <p class="project-title">Web3 DAO Project</p>
@@ -109,7 +106,6 @@
                     <div class="project-div-main">
                         <div class="project-uppper-div">
                             <img class="project-img" loading="eager" src="assets/M4U web projectr cover.jpg" style="background: white;" alt="web design project for a non-profit organisation">
-                            <!-- <img class="project-img phone" loading="eager" src="assets/M4U phone cover.png" style="background: white;" alt="web design project for a non-profit organisation"> -->
                         </div>
                         <div class="project-lower-div">
                             <p class="project-title">Mission for Ukraine</p>
@@ -120,7 +116,6 @@
                     <div class="project-div-main">
                         <div class="project-uppper-div">
                             <img class="project-img" loading="eager" src="assets/Coaches for Ukraine-min.png" style="background: #434c5ab9;" alt="web design project for a coaching project">
-                            <!-- <img class="project-img phone" loading="eager" src="assets/Coaches for Ukraine phone.png" style="background: #434c5ab9;" alt="web design project for a coaching project"> -->
                         </div>
                         <div class="project-lower-div">
                             <p class="project-title">Coaches for Ukraine</p>
@@ -131,7 +126,6 @@
                     <div class="project-div-main">
                         <div class="project-uppper-div">
                             <img class="project-img" loading="eager"  src="assets/Help99-min.png" style="background: linear-gradient(155deg, #043016 5.33%, rgba(55, 90, 50, 0.66) 36.6%, #0F2F04 90.9%);" alt="web design project for a non-profit organisation">
-                            <!-- <img class="project-img phone" loading="eager"  src="assets/help99 phone.png" style="background: linear-gradient(155deg, #043016 5.33%, rgba(55, 90, 50, 0.66) 36.6%, #0F2F04 90.9%);" alt="web design project for a non-profit organisation"> -->
                         </div>
                         <div class="project-lower-div">
                             <p class="project-title">Help99 Initiative</p>
@@ -142,7 +136,6 @@
                     <div class="project-div-main">
                         <div class="project-uppper-div">
                             <img class="project-img" loading="eager"  src="assets/UA 911.png" style="background-color: #253946dc;" alt="web design project for a fundraising initiative in Ukraine">
-                            <!-- <img class="project-img phone" loading="eager"  src="assets/911 phone.png" style="background-color: #253946dc;" alt="web design project for a fundraising initiative in Ukraine"> -->
                         </div>
                         <div class="project-lower-div">
                             <p class="project-title">UA 911 Fundraising</p>
@@ -153,7 +146,6 @@
                     <div class="project-div-main">
                         <div class="project-uppper-div">
                             <img class="project-img" loading="eager"  src="assets/AAZ web preview-min.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);" alt="web design project for a fertilizer company">
-                            <!-- <img class="project-img phone" loading="eager"  src="assets/aaz phone.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);" alt="web design project for a fertilizer company"> -->
                         </div>
                         <div class="project-lower-div">
                             <p class="project-title">AAZ Fertilizer Company</p>
@@ -164,7 +156,6 @@
                     <div class="project-div-main">
                         <div class="project-uppper-div">
                             <img class="project-img" loading="eager"  src="assets/Sudoculus-1-min.png" style="background: #4e5560ce;" alt="web design project for a mathematical game named Sudoculus">
-                            <!-- <img class="project-img phone" loading="eager"  src="assets/Sudoculus phone.png" style="background: #4e5560ce;" alt="web design project for a mathematical game named Sudoculus"> -->
                         </div>
                         <div class="project-lower-div">
                             <p class="project-title">Sudoculus Game</p>
@@ -175,7 +166,6 @@
                     <div class="project-div-main">
                         <div class="project-uppper-div">
                             <img class="project-img" loading="eager" src="assets/Art of scandenavia web preview.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);" alt="web design project for an art collector">
-                            <!-- <img class="project-img phone" loading="eager"  src="assets/artbay phone.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);" alt="web design project for an art collector"> -->
                         </div>
                         <div class="project-lower-div">
                             <p class="project-title">Art of Scandinavia</p>
@@ -186,7 +176,6 @@
                     <div class="project-div-main">
                         <div class="project-uppper-div">
                             <img class="project-img" loading="eager" src="assets/Pilar-1-min.png" style="background: linear-gradient(18deg, #59111fe0 28.56%, #ad2f2fd7 71.41%), #ffffffb7;" alt="web design project for an artist, a painter">
-                            <!-- <img class="project-img phone" loading="eager" src="assets/pilar phone.png" style="background: linear-gradient(18deg, #59111fe0 28.56%, #ad2f2fd7 71.41%), #ffffffb7;" alt="web design project for an artist, a painter"> -->
                         </div>
                         <div class="project-lower-div">
                             <p class="project-title">Pilar Elias Art</p>
@@ -197,7 +186,6 @@
                     <div class="project-div-main">
                         <div class="project-uppper-div">
                             <img class="project-img" rel="preload" loading="eager" src="assets/Active mode-min.png" style="background: #434c5ad1;" alt="App design with full set of icon design for Active Mode, a sport social media platform">
-                            <!-- <img class="project-img phone" rel="preload" loading="eager" src="assets/am phone.png" style="background: #434c5ad1;" alt="App design with full set of icon design for Active Mode, a sport social media platform"> -->
                         </div>
                         <div class="project-lower-div">
                             <p class="project-title">Active Mode App</p>
@@ -208,7 +196,6 @@
                     <div class="project-div-main">
                         <div class="project-uppper-div">
                             <img class="project-img" src="assets/Sudoculus app.jpg" alt="App design with full set of icon design for Sudoculus, a math based game">
-                            <!-- <img class="project-img phone" src="assets/Sudoculus phone.png" style="background: #434c5ad1;" alt="App design with full set of icon design for Sudoculus, a math based game">  -->
                         </div>
                         <div class="project-lower-div">
                             <p class="project-title">Sudoculus App</p>
@@ -219,7 +206,6 @@
                     <div class="project-div-main">
                         <div class="project-uppper-div">
                             <img class="project-img" src="assets/word puzzle.jpg" alt="App design for a puzzle game">
-                            <!-- <img class="project-img phone"  src="assets/puzzle phone.png" alt="App design for a puzzle game"> -->
                         </div>
                         <div class="project-lower-div">
                             <p class="project-title">Word Puzzle Game</p>
@@ -229,7 +215,7 @@
                     <div class="project-div-main">
                         <div class="project-uppper-div">
                             <div class="logo-div" style="background-image: url('assets/Active mode logo bg-min.jpg');">
-                                <img class="logo-img" alt="Custom logo design featuring geometric icon of the AM initials and bold typography for ActiveMode" rel="preload" loading="eager" src="assets/active mode logo.png">
+                                <img class="logo-img" alt="Custom logo design featuring geometric icon of the AM initials and bold typography for ActiveMode" rel="preload" src="assets/active mode logo.png">
                             </div>
                         </div>
                         <div class="project-lower-div">
@@ -241,7 +227,7 @@
                     <div class="project-div-main">
                         <div class="project-uppper-div">
                             <div class="logo-div" style="background-image: url('assets/Tottaly jasmine logo bg-min.jpg');">
-                                <img class="logo-img" alt="Totally Jasmin logo design with a flower icon" loading="eager" src="assets/totally jasmin logo.png">
+                                <img class="logo-img" alt="Totally Jasmin logo design with a flower icon" loading="lazy" src="assets/totally jasmin logo.png">
                             </div>
                         </div>
                         <div class="project-lower-div">
@@ -330,7 +316,7 @@
                     </div>
                     <div class="project-div-main">
                         <div class="project-uppper-div">
-                            <div class="logo-div" style="background-image: url('assets/Gallivanters log logo bg-min.jpg'); max-height: 60%;">
+                            <div class="logo-div" style="background-image: url('assets/Gallivanters log logo bg-min.jpg'); max-width: 80vw;">
                                 <img class="logo-img" alt="Custom logo design options circular designs in different design styles for Galivanter's Log"  src="assets/galivanter log logo highlighted.png" style="max-width: 500px;">
                             </div>
                         </div>
