--- a/portfolio.html
+++ b/portfolio.html
@@ -294,7 +294,7 @@
                     </div>
                     <div class="project-div-main">
                         <div class="project-uppper-div">
-                            <div class="logo-div" style="background-image: url('assets/Charm of the elements logo bg-min.jpg'); max-width: 70vw;">
+                            <div class="logo-div" style="background-image: url('assets/Charm of the elements logo bg-min.jpg');">
                                 <img class="logo-img" alt="Charm of the elements logo design, minimalistic logo"  src="assets/charm of  the elements logo.png">
                             </div>
                         </div>
@@ -316,8 +316,8 @@
                     </div>
                     <div class="project-div-main">
                         <div class="project-uppper-div">
-                            <div class="logo-div" style="background-image: url('assets/Gallivanters log logo bg-min.jpg'); max-width: 80vw;">
-                                <img class="logo-img" alt="Custom logo design options circular designs in different design styles for Galivanter's Log"  src="assets/galivanter log logo highlighted.png" style="max-width: 500px;">
+                            <div class="logo-div" style="background-image: url('assets/Gallivanters log logo bg-min.jpg');">
+                                <img class="logo-img" alt="Custom logo design options circular designs in different design styles for Galivanter's Log"  src="assets/galivanter log logo highlighted.png" style="max-width: 80vw;">
                             </div>
                         </div>
                         <div class="project-lower-div">
