--- a/portfolio.html
+++ b/portfolio.html
@@ -317,7 +317,7 @@
                     <div class="project-div-main">
                         <div class="project-uppper-div">
                             <div class="logo-div" style="background-image: url('assets/Gallivanters log logo bg-min.jpg');">
-                                <img class="logo-img" alt="Custom logo design options circular designs in different design styles for Galivanter's Log"  src="assets/galivanter log logo highlighted.png" style="max-width: 80vw;">
+                                <img class="logo-img" alt="Custom logo design options circular designs in different design styles for Galivanter's Log"  src="assets/galivanter log logo highlighted.png">
                             </div>
                         </div>
                         <div class="project-lower-div">
