project page background color update

--- a/project/lift99-dao.html
+++ b/project/lift99-dao.html
@@ -17,7 +17,7 @@
     <header-links-projects></header-links-projects>
     <link rel="stylesheet" href="project.css">
 </head>
-<body style="background: #311742;">
+<body >
     <div class="center">
         <img class="fullwidth" src="../assets/dao 1.png">
     </div>
