--- a/project/lift99-hr.html
+++ b/project/lift99-hr.html
@@ -17,7 +17,7 @@
     <header-links-projects></header-links-projects>
     <link rel="stylesheet" href="project.css">
 </head>
-<body style="background: #253946;">
+<body>
     <div class="center">
         <img class="fullwidth" src="../assets/hr 1.png">
     </div>
