--- a/project/sudoculus.html
+++ b/project/sudoculus.html
@@ -17,7 +17,7 @@
     <header-links-projects></header-links-projects>
     <link rel="stylesheet" href="project.css">
 </head>
-<body style="background-image : linear-gradient(1deg, #1BB5CA 0%, #24163C 100%);">
+<body>
     <div class="center">
         <img class="fullwidth w50" src="../assets/sudoculus 1.png">
     </div>
