--- a/project/ua911.html
+++ b/project/ua911.html
@@ -17,7 +17,7 @@
     <header-links-projects></header-links-projects>
     <link rel="stylesheet" href="project.css">
 </head>
-<body style="background-color: #0A5F7A">
+<body>
     <div class="center">
         <img class="fullwidth" src="../assets/911 1.png">
     </div>
