--- a/project/artbay.html
+++ b/project/artbay.html
@@ -19,7 +19,7 @@
     <header-links-projects></header-links-projects>
     <link rel="stylesheet" href="project.css">
 </head>
-<body style="background-image: linear-gradient(180deg, rgba(193, 164, 110, 0.70) 36.64%, rgba(213, 189, 142, 0.31) 94.95%);">
+<body >
     <div class="center">
         <img class="fullwidth" src="../assets/artbay 1.png">
     </div>
