--- a/project/help99.html
+++ b/project/help99.html
@@ -19,7 +19,7 @@
     <header-links-projects></header-links-projects>
     <link rel="stylesheet" href="project.css">
 </head>
-<body style="background-image: linear-gradient(155deg, #043016 5.33%, rgba(31, 48, 29, 0.66) 36.6%, #0F2F04 90.9%);">
+<body>
     <div class="center">
         <img class="fullwidth" src="../assets/help99 1.png">
     </div>
@@ -42,7 +42,6 @@
             <p style="margin-bottom: -50px;">
                 +  Complex payment options
             </p>
-            <img style="position: absolute; right: -120px; top: 65px;" src="../assets/arrow 4.svg" >
         </div>
         <img class="fullwidth" src="../assets/help99 2.png">
     </section>
@@ -51,7 +50,6 @@
             <p>
                 + adaptive to all screens
             </p>
-            <img style="position: absolute; right: -260px; top: 60px;" src="../assets/arrow 4.svg" >
         </div>
         <img class="fullwidth w60" src="../assets/help99 3.png">
     </section>
@@ -60,7 +58,6 @@
             <p>
                 + Dark mode for our NFT collection
             </p>
-            <img style="position: absolute; right: -160px; top: 50px;" src="../assets/arrow 4.svg" >
         </div>
         <img class="fullwidth" src="../assets/help99 4.png">
     </section>
