--- a/project/pilar-elias-art.html
+++ b/project/pilar-elias-art.html
@@ -17,7 +17,7 @@
     <header-links-projects></header-links-projects>
     <link rel="stylesheet" href="project.css">
 </head>
-<body style="background-image: linear-gradient(155deg, #043016 5.33%, rgba(55, 90, 50, 0.66) 36.6%, #0F2F04 90.9%);">
+<body >
     <div class="center">
         <img class="fullwidth" src="../assets/pilar 1.png">
     </div>
