--- a/project/zbuzz.html
+++ b/project/zbuzz.html
@@ -17,7 +17,7 @@
     <header-links-projects></header-links-projects>
     <link rel="stylesheet" href="project.css">
 </head>
-<body style="background-image: linear-gradient(155deg, #544B00 5.33%, rgba(20, 20, 19, 0.66) 36.6%, #2D4127 90.9%);">
+<body>
     <div class="center">
         <img class="fullwidth" src="../assets/zbuzz 1.png">
     </div>
