--- a/portfolio.html
+++ b/portfolio.html
@@ -32,11 +32,7 @@
     <div class="bigger-container">
         <div class="container">
             <div class="section">
-                <h1>My portfolio</h1>
-            </div>
-
-            <div class="section">
-                <h1>Highlighted</h1>
+                <h1>Highlighted projects</h1>
                 <p>My favourite work</p>
                 <p class="swipe">< -- swipe for more  -- ></p>
                 <section class="swiper-section project-section">
