next project button

--- a/project/active-mode.html
+++ b/project/active-mode.html
@@ -57,6 +57,9 @@
     <section>
         <img class="fullwidth w70" src="../assets/am 8.png">
     </section>
+    <section>
+        <a class="next-button" target="_blank" href="artbay.html">Next project -></a>
+    </section>
     <nav-menu base-path="../"></nav-menu>
     <main-footer base-path="../"></main-footer>
     <hire-me-component base-path="../"></hire-me-component>
