--- a/project/coaching.html
+++ b/project/coaching.html
@@ -55,6 +55,9 @@
         </div>
         <img class="fullwidth w60" src="../assets/coach 3.png">
     </section>
+    <section>
+        <a class="next-button" target="_blank" href="help99.html">Next project -></a>
+    </section>
     <nav-menu base-path="../"></nav-menu>
     <hire-me-component base-path="../"></hire-me-component>
     <main-footer base-path="../"></main-footer>
