--- a/project/help99.html
+++ b/project/help99.html
@@ -61,6 +61,9 @@
         </div>
         <img class="fullwidth" src="../assets/help99 4.png">
     </section>
+    <section>
+        <a class="next-button" target="_blank" href="Leonardite.html">Next project -></a>
+    </section>
     <nav-menu base-path="../"></nav-menu>
     <hire-me-component base-path="../"></hire-me-component>
     <main-footer base-path="../"></main-footer>
