--- a/project/artbay.html
+++ b/project/artbay.html
@@ -51,6 +51,9 @@
     <section>
         <img class="fullwidth w60 radius20" src="../assets/artbay 6.png">
     </section>
+    <section>
+        <a class="next-button" target="_blank" href="coaching.html">Next project -></a>
+    </section>
     <nav-menu base-path="../"></nav-menu>
     <hire-me-component base-path="../"></hire-me-component>
     <main-footer base-path="../"></main-footer>
