--- a/project/lift99-dao.html
+++ b/project/lift99-dao.html
@@ -49,6 +49,9 @@
     <section>
         <img class="fullwidth" src="../assets/dao 3.png">
     </section>
+    <section>
+        <a class="next-button" target="_blank" href="lift99-hr.html">Next project -></a>
+    </section>
     <nav-menu base-path="../"></nav-menu>
     <hire-me-component base-path="../"></hire-me-component>
     <main-footer base-path="../"></main-footer>
