--- a/project/mission-for-ukraine.html
+++ b/project/mission-for-ukraine.html
@@ -53,6 +53,9 @@
     <section>
         <img class="fullwidth" src="../assets/m4u project 4.png">
     </section>
+    <section>
+        <a class="next-button" target="_blank" href="pilar-elias-art.html">Next project -></a>
+    </section>
     <nav-menu base-path="../"></nav-menu>
     <hire-me-component base-path="../"></hire-me-component>
     <main-footer base-path="../"></main-footer>
