--- a/project/zbuzz.html
+++ b/project/zbuzz.html
@@ -83,6 +83,9 @@
         </div>
         <img class="fullwidth" src="../assets/zbuzz 7.png">
     </section>
+    <section>
+        <a class="next-button" target="_blank" href="active-mode.html">Next project -></a>
+    </section>
     <nav-menu base-path="../"></nav-menu>
     <hire-me-component base-path="../"></hire-me-component>
     <main-footer base-path="../"></main-footer>
