--- a/logo.html
+++ b/logo.html
@@ -51,6 +51,9 @@
                     <div class="logo-div" style="background: linear-gradient(160deg, #363642 25.84%, #0B0B0C 76.08%);">
                         <img class="logo-img" alt="Custom logo design featuring abstract geometric icon of the MU initials and bold typography for Mission 4 Ukraine" loading="lazy" src="assets/m4u logo.png">
                     </div>
+                    <div class="logo-div" style="background-color: #F288B7;">
+                        <img class="logo-img" alt="Custom logo design featuring curvey letters for Mouze Magic Box" loading="lazy" src="assets/mouze logo.svg">
+                    </div>
                     <div class="logo-div" style="background-image: url(assets/Middle\ litoral\ logo\ bg-min.jpg);">
                         <img class="logo-img" alt="Custom logo design featuring abstract geometric icon of the ML initials and bold typography for Middle Litoral, logo in Arabic and English" loading="lazy" src="assets/middle litoral logo.png">
                     </div>
