--- a/portfolio.html
+++ b/portfolio.html
@@ -65,7 +65,21 @@
                     </swiper-container>
                 </section>
             </div>
-
+            <div class="section">
+                <h1>Clients</h1>
+                <p>Some of my clients</p>
+                <div class="client-main-div">
+                    <img class="client-logo" style="height: 60px;" src="assets/ML white logo.svg">
+                    <img class="client-logo" style="height: 60px;" src="assets/aaz white logo.svg">
+                    <img class="client-logo" style="height: 50px;" src="assets/dao white logo.svg">
+                    <img class="client-logo" style="height: 40px;" src="assets/m4u white logo.svg">
+                    <img class="client-logo" style="height: 50px;" src="assets/lift99 white logo.svg">
+                    <img class="client-logo" style="height: 30px;" src="assets/NUMO ADHD white logo.svg">
+                    <img class="client-logo" style="height: 30px;" src="assets/kalyanchik white logo.svg">
+                    <img class="client-logo" style="height: 60px;" src="assets/aaas white logo.svg">
+                    <img class="client-logo" style="height: 70px;" src="assets/depo white logo.svg">
+                </div>
+            </div>
             <div class="section">
                 <h1>All projects</h1>
                 <div class="project-div-container">
@@ -147,6 +161,16 @@
                             <p class="project-title">AAZ Fertilizer Company</p>
                             <p class="project-tags">#Fertilizer #Web design</p>
                             <a class="project-button" href="/project/Leonardite.html">Check it out-></a>
+                        </div>
+                    </div>
+                    <div class="project-div-main">
+                        <div class="project-uppper-div">
+                            <img class="project-img" loading="eager"  src="assets/mouze presentation 2.jpg" style="background: #F288B7; padding: 8% 0;" alt="Corporate identity design for a kid toy sharing service">
+                        </div>
+                        <div class="project-lower-div">
+                            <p class="project-title">Mouze Magic Box</p>
+                            <p class="project-tags">#Logo design #Corporate identity</p>
+                            <a class="project-button" href="/project/mouze.html">Check it out-></a>
                         </div>
                     </div>
                     <div class="project-div-main">
