--- a/project/Leonardite.html
+++ b/project/Leonardite.html
@@ -53,7 +53,7 @@
         <img class="fullwidth radius20" src="../assets/leo 8.jpeg">
     </section>
     <section>
-        <a class="next-button" target="_blank" href="lift99-dao.html">Next project -></a>
+        <a class="next-button" href="lift99-dao.html">Next project -></a>
     </section>
     <nav-menu base-path="../"></nav-menu>
     <hire-me-component base-path="../"></hire-me-component>
