--- a/project/coaching.html
+++ b/project/coaching.html
@@ -19,7 +19,7 @@
     <header-links-projects></header-links-projects>
     <link rel="stylesheet" href="project.css">
 </head>
-<body style="background-color: #847865;">
+<body>
     <div class="center">
         <img class="fullwidth" src="../assets/coach 1.png">
     </div>
@@ -42,7 +42,6 @@
             <p>
                 +  Tags & filters
             </p>
-            <img style="position: absolute; right: -280px; top: 30px;" src="../assets/arrow 4.svg" >
         </div>
         <img class="fullwidth" src="../assets/coach 2.png">
     </section>
@@ -51,12 +50,11 @@
             <p>
                 + Interactive design
             </p>
-            <img style="position: absolute; right: -300px; top: 30px;" src="../assets/arrow 4.svg" >
         </div>
         <img class="fullwidth w60" src="../assets/coach 3.png">
     </section>
     <section>
-        <a class="next-button" target="_blank" href="help99.html">Next project -></a>
+        <a class="next-button" href="help99.html">Next project -></a>
     </section>
     <nav-menu base-path="../"></nav-menu>
     <hire-me-component base-path="../"></hire-me-component>
