--- a/project/lift99-dao.html
+++ b/project/lift99-dao.html
@@ -50,7 +50,7 @@
         <img class="fullwidth" src="../assets/dao 3.png">
     </section>
     <section>
-        <a class="next-button" target="_blank" href="lift99-hr.html">Next project -></a>
+        <a class="next-button" href="lift99-hr.html">Next project -></a>
     </section>
     <nav-menu base-path="../"></nav-menu>
     <hire-me-component base-path="../"></hire-me-component>
