--- a/project/mouze.html
+++ b/project/mouze.html
@@ -12,40 +12,57 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pilar Elias Art project</title>
+    <title>MOUZE project</title>
     <script src="../elements.js"></script>
     <header-links-projects></header-links-projects>
     <link rel="stylesheet" href="project.css">
 </head>
-<body >
+<body>
     <div class="center">
-        <img class="fullwidth" src="../assets/pilar 1.png">
+        <img class="fullwidth" src="../assets/mouze presentation 1.jpg">
     </div>
     <section>
         <div class="h1div">
-            <h1>Pilar</h1>
+            <h1>MOUZE</h1>
         </div>
-        <a class="link" target="_blank" href="https://pilar-elias-art.vercel.app/">Check out live web</a>
     </section>
     <section>
         <p class="highlighted smaller">
             my contribution:
         </p>
         <p class="highlighted removetop">
-            -> Web Development <br>-> Web Design
+            -> Logo design <br>-> Corporate identity <br>-> Aliens design
         </p> 
     </section>
     <section>
-        <img class="fullwidth" src="../assets/pilar 2.png">
+        <img class="fullwidth" src="../assets/mouze presentation 2.jpg">
     </section>
     <section>
-        <img class="fullwidth" src="../assets/pilar 3.png">
+        <img class="fullwidth" src="../assets/mouze presentation 3.jpg">
     </section>
     <section>
-        <img class="fullwidth" src="../assets/pilar 4.png">
+        <img class="fullwidth" src="../assets/mouze presentation 4.jpg">
     </section>
     <section>
-        <a class="next-button" href="sudoculus.html">Next project -></a>
+        <img class="fullwidth" src="../assets/mouze presentation 5.jpg">
+    </section>
+    <section>
+        <img class="fullwidth" src="../assets/mouze presentation 6.jpg">
+    </section>
+    <section>
+        <img class="fullwidth" src="../assets/mouze presentation 7.jpg">
+    </section>
+    <section>
+        <img class="fullwidth" src="../assets/mouze presentation 8.jpg">
+    </section>
+    <section>
+        <img class="fullwidth" src="../assets/mouze presentation 9.jpg">
+    </section>
+    <section>
+        <img class="fullwidth" src="../assets/mouze presentation 10.jpg">
+    </section>
+    <section>
+        <a class="next-button" href="pilar-elias-art.html">Next project -></a>
     </section>
     <nav-menu base-path="../"></nav-menu>
     <hire-me-component base-path="../"></hire-me-component>
