--- a/project/sudoculus.html
+++ b/project/sudoculus.html
@@ -47,7 +47,7 @@
         <img class="fullwidth w70" src="../assets/sudoculus 5.png">
     </section>
     <section>
-        <a class="next-button" target="_blank" href="ua911.html">Next project -></a>
+        <a class="next-button" href="ua911.html">Next project -></a>
     </section>
     <nav-menu base-path="../"></nav-menu>
     <hire-me-component base-path="../"></hire-me-component>
