--- a/project/artbay.html
+++ b/project/artbay.html
@@ -52,7 +52,7 @@
         <img class="fullwidth w60 radius20" src="../assets/artbay 6.png">
     </section>
     <section>
-        <a class="next-button" target="_blank" href="coaching.html">Next project -></a>
+        <a class="next-button" href="coaching.html">Next project -></a>
     </section>
     <nav-menu base-path="../"></nav-menu>
     <hire-me-component base-path="../"></hire-me-component>
