--- a/project/lift99-hr.html
+++ b/project/lift99-hr.html
@@ -40,7 +40,6 @@
             <p>
                 +Super duper filtering system
             </p>
-            <img style="position: absolute; right: -120px; top: 65px;" src="../assets/arrow 1.svg" >
         </div>
         <img class="fullwidth w90" src="../assets/hr 2.png">
         <div class="arrowdiv">
@@ -49,7 +48,6 @@
                 + Airtable integration<br>
                 + User management systems
             </p>
-            <img style="position: absolute; right: -260px; bottom: 50px;" src="../assets/arrow 2.svg" >
         </div>
     </section>
     <section>
@@ -65,7 +63,6 @@
             <p>
                 + Extensive CMS
             </p>
-            <img style="position: absolute; right: -160px; top: 50px;" src="../assets/arrow 3.svg" >
         </div>
         <img class="fullwidth" src="../assets/hr 3.png">
     </section>
@@ -74,12 +71,11 @@
             <p>
                 + Designed for all screens
             </p>
-            <img style="position: absolute; right: -290px; top: 40px;" src="../assets/arrow 4.svg" >
         </div>
         <img class="fullwidth" src="../assets/hr 4.png">
     </section>
     <section>
-        <a class="next-button" target="_blank" href="mission-for-ukraine.html">Next project -></a>
+        <a class="next-button" href="mission-for-ukraine.html">Next project -></a>
     </section>
     <nav-menu base-path="../"></nav-menu>
     <hire-me-component base-path="../"></hire-me-component>
