--- a/project/mission-for-ukraine.html
+++ b/project/mission-for-ukraine.html
@@ -54,7 +54,7 @@
         <img class="fullwidth" src="../assets/m4u project 4.png">
     </section>
     <section>
-        <a class="next-button" target="_blank" href="pilar-elias-art.html">Next project -></a>
+        <a class="next-button" href="mouze.html">Next project -></a>
     </section>
     <nav-menu base-path="../"></nav-menu>
     <hire-me-component base-path="../"></hire-me-component>
