--- a/project/ua911.html
+++ b/project/ua911.html
@@ -45,7 +45,7 @@
         <img class="fullwidth" src="../assets/911 4.png">
     </section>
     <section>
-        <a class="next-button" target="_blank" href="zbuzz.html">Next project -></a>
+        <a class="next-button" href="zbuzz.html">Next project -></a>
     </section>
     <nav-menu base-path="../"></nav-menu>
     <hire-me-component base-path="../"></hire-me-component>
