--- a/portfolio.html
+++ b/portfolio.html
@@ -67,14 +67,14 @@
             </div>
             <div class="section">
                 <h1>Clients</h1>
-                <p>Some of my clients</p>
+                <p>Some Brands I've worked with</p>
                 <div class="client-main-div">
-                    <img class="client-logo" style="height: 60px;" src="assets/ML white logo.svg">
                     <img class="client-logo" style="height: 60px;" src="assets/aaz white logo.svg">
                     <img class="client-logo" style="height: 50px;" src="assets/dao white logo.svg">
                     <img class="client-logo" style="height: 40px;" src="assets/m4u white logo.svg">
                     <img class="client-logo" style="height: 50px;" src="assets/lift99 white logo.svg">
                     <img class="client-logo" style="height: 30px;" src="assets/NUMO ADHD white logo.svg">
+                    <img class="client-logo" style="height: 60px;" src="assets/ML white logo.svg">
                     <img class="client-logo" style="height: 30px;" src="assets/kalyanchik white logo.svg">
                     <img class="client-logo" style="height: 60px;" src="assets/aaas white logo.svg">
                     <img class="client-logo" style="height: 70px;" src="assets/depo white logo.svg">
