--- a/portfolio.html
+++ b/portfolio.html
@@ -71,8 +71,11 @@
                 <div class="client-main-div">
                     <img class="client-logo" style="height: 60px;" src="assets/aaz white logo.svg">
                     <img class="client-logo" style="height: 50px;" src="assets/dao white logo.svg">
-                    <img class="client-logo" style="height: 40px;" src="assets/m4u white logo.svg">
                     <img class="client-logo" style="height: 50px;" src="assets/lift99 white logo.svg">
+                    <img class="client-logo" style="height: 50px;" src="assets/leo logo white.svg">
+                    <img class="client-logo" style="height: 50px;" src="assets/skylux logo white.svg">
+                    <img class="client-logo" style="height: 40px;" src="assets/m4u white logo.svg">
+                    <img class="client-logo" style="height: 50px;" src="assets/zbuzz logo white.svg">
                     <img class="client-logo" style="height: 30px;" src="assets/NUMO ADHD white logo.svg">
                     <img class="client-logo" style="height: 60px;" src="assets/ML white logo.svg">
                     <img class="client-logo" style="height: 30px;" src="assets/kalyanchik white logo.svg">
